# udi-poly-homekit-hub

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  BONJOUR_FEASIBILITY.md  CHANGELOG.md  CONFIG.md  DEBUGGING.md  DEVELOPMENT.md  Makefile  PLUGIN_AUTHORING.md  PROTOCOL.md  README.md  dev_edition.example.txt  dev_settings.py  homekit-poly.py  hub_node_funcs.py  install.sh  node_funcs.py  pyproject.toml  requirements-dev.txt  requirements.txt  ws_debug_client.py  zip_exclude.lst  zip_exclude_professional.lst
.github/workflows/: ci.yml
docs/sessions/: 2026-04-28_session.jsonl  2026-04-28_session.md  README.md  _render_digest.py
homekit_hub/: __init__.py  bridge.py  char_map.py  config_debug.py  device_classifier.py  device_inventory.py  hap_apply.py  hap_labels.py  mqtt_topics.py  paths.py  x_hm_uri.py
nodes/: BinarySensorNode.py  Controller.py  EcobeeThermostatNode.py  LightNode.py  PairedDeviceNode.py  SensorNode.py  SwitchNode.py  ThermostatNode.py  __init__.py
profile/editor/: editors.xml
profile/nls/: en_us.txt
profile/nodedef/: generic_nodedefs.xml  nodedefs.xml
scripts/: strip_standard_zip.py
tests/: __init__.py  conftest.py  test_bridge_helpers.py  test_config_debug.py  test_controller_helpers.py  test_dev_settings.py  test_device_classifier.py  test_device_inventory.py  test_hap_apply.py  test_mqtt_topics.py  test_node_funcs.py  test_thermostat_setpoint_writes.py  test_ws_debug_client.py  test_ws_live.py  test_x_hm_uri.py
tests/fixtures/: 44_be_73_09_47_20.json
tools/: decode_x_hm_setup.py
(+3 files in other folders)
