# Tooling and dev config. Runtime deps remain in requirements.txt (Polyglot install.sh).
# IoX profile version: profile/version.txt

[project]
name = "udi-poly-homekit-hub"
description = "PG3x HomeKit hub Node Server (profile version in profile/version.txt)"
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "integration: live WebSocket tests against a running hub (see tests/test_ws_live.py)",
    "mqtt_integration: optional MQTT broker tests (see tests/test_mqtt_topics.py)",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["homekit_hub", "nodes", "tests", "tools", "ws_debug_client.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]
